--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   "dependencies": {
     "app-root-path": "^3.0.0",
     "bcrypt": "^5.0.1",
+    "bruteforce": "^0.0.2",
+    "cors": "^2.8.5",
+    "dirname": "^0.1.0",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "express-brute": "^1.0.1",
+    "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
+    "node-api-limiter": "^1.1.3",
     "nodemon": "^2.0.19",
+    "password-validator": "^5.3.0",
+    "pkg": "^5.8.0",
     "winston": "^3.8.0"
   }
 }
